--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -63,18 +63,23 @@
     <div class="slides">
         <div class="slide">
             <img src="images/aline.jpg" alt="Aline"/>
+            <div class="texto-imagem">Aline Alves</div>
         </div>
         <div class="slide">
             <img src="images/elis.jpg" alt="Elis"/>
+            <div class="texto-imagem">Elis Rodrigues</div>
         </div>
         <div class="slide">
             <img src="images/keila.jpg" alt="Keila"/>
+            <div class="texto-imagem">Keila Arakaki</div>
         </div>
         <div class="slide">
             <img src="images/nayara.jpg" alt="Nayara"/>
+            <div class="texto-imagem">Nayara Karine</div>
         </div>
         <div class="slide">
             <img src="images/thais.jpg" alt="Thais"/>
+            <div class="texto-imagem">Thais Abe</div>
         </div>
     </div>
 </section>
