--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,7 +32,7 @@
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="login-usuario.html" >
+        <a href="login.html" >
             <span></span>
             <span></span>
             <span></span>
