Organização de pastas

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/style.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -16,13 +16,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+20&family=Orbitron:wght@400..900&family=Righteous&family=Roboto+Mono:wght@100..700&display=swap" rel="stylesheet"/>
 
     <title>Portal Tech</title>
-    <link rel="icon" href="images/logo.jpeg"/>
+    <link rel="icon" href="styles/images/logo.jpeg"/>
 
 </head>
 <body>
 <header class="cabecalho">
     <div class="logo">
-        <img src="images/logo.jpeg" alt="logo Portal Tech"/>
+        <img src="styles/images/logo.jpeg" alt="logo Portal Tech"/>
     </div>
     <div class="titulo">
         <span></span>
@@ -55,7 +55,7 @@
                 agilidade!
             </p>
         </div>
-        <img src="images/persona.jpeg" class="img"/>
+        <img src="styles/images/persona.jpeg" class="img"/>
     </div>
 </section>
 
@@ -63,23 +63,23 @@
     <h1 class="fotos-titulo">Técnicas</h1>
     <div class="slides">
         <div class="slide">
-            <img src="images/aline.jpg" alt="Aline"/>
+            <img src="styles/images/aline.jpg" alt="Aline"/>
             <div class="texto-imagem">Aline Alves</div>
         </div>
         <div class="slide">
-            <img src="images/elis.jpg" alt="Elis"/>
+            <img src="styles/images/elis.jpg" alt="Elis"/>
             <div class="texto-imagem">Elis Rodrigues</div>
         </div>
         <div class="slide">
-            <img src="images/keila.jpg" alt="Keila"/>
+            <img src="styles/images/keila.jpg" alt="Keila"/>
             <div class="texto-imagem">Keila Arakaki</div>
         </div>
         <div class="slide">
-            <img src="images/nayara.jpg" alt="Nayara"/>
+            <img src="styles/images/nayara.jpg" alt="Nayara"/>
             <div class="texto-imagem">Nayara Karine</div>
         </div>
         <div class="slide">
-            <img src="images/thais.jpg" alt="Thais"/>
+            <img src="styles/images/thais.jpg" alt="Thais"/>
             <div class="texto-imagem">Thais Abe</div>
         </div>
     </div>
@@ -89,7 +89,7 @@
     <div class="container">
         <div class="footer-content">
             <div class="github">
-                <img src="images/github.png" alt="GitHub Logo" class="github-img"/>
+                <img src="styles/images/github.png" alt="GitHub Logo" class="github-img"/>
             </div>
             <div class="github-links">
                 <a href="https://github.com/alineadcosta95">Aline Alves </a>
