create controllers front

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,8 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" type="text/css" href="./style.css"/>
+<!--    <link rel="stylesheet" type="text/css" href="../static/styles/style.css"/>-->
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -32,14 +33,13 @@
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="/login">
+        <a href="../templates/login.html" >
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
             Login
         </a>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-
     </nav>
 </header>
 
