--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -56,7 +56,7 @@
                 agilidade!
             </p>
         </div>
-        <img src="styles/images/persona.jpeg" class="img"/>
+        <img src="styles/images/persona1.jpeg" class="img"/>
     </div>
 </section>
 
