--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -26,21 +26,12 @@
         <img src="styles/images/logo.jpeg" alt="logo Portal Tech"/>
     </div>
     <div class="titulo">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-        <a href="/templates/login.html">
+        <a href="login">
             Login
         </a>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-
     </nav>
 </header>
 
